prd/unispace/unispace-landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unispace-landing
  namespace: unispace
  labels:
    app: unispace-landing
spec:
  type: ClusterIP
  selector:
    app: unispace-landing
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
