prd/unispace/unispace-landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unispace-landing-ingress
  namespace: unispace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: unispace.soludev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unispace-landing
                port:
                  number: 80
